test/files/neg/t2139.check
t2139.scala:13: error: type mismatch;
 found   : 4.type (with underlying type Int)
 required: Nothing
  val z:Int=(u.f _)(4)
                    ^
one error found
